--- a/classicoFrontend/index.html
+++ b/classicoFrontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/brandname.jpg" />
+  <link rel="icon" type="image/svg+xml" href="/cllogo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Classico Lifestyle</title>
 </head>
