--- a/classicoFrontend/index.html
+++ b/classicoFrontend/index.html
@@ -6,7 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="/classico3.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Classico LifeStyle</title>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
